theme: fix mermaid bgcolor in dark mode

--- a/theme/styles/post.css
+++ b/theme/styles/post.css
@@ -102,4 +102,5 @@ article code:not([class*="language-"]) {
 
 article .mermaid {
   text-align: center;
+  background-color: #fff;
 }
